Switch to fastaspi
